<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_screen_desc">SASTRA University and Coca-Cola serve you the latest edition of KURUKSASTRA ‘15, a National level cultural fest – and this time it’s spicier and tastier! Come and indulge your senses in the most sumptuous buffet of events spanning 3 days and tease your taste buds by savoring the mouthwatering delicacies offered by each of our clusters. With a myriad of creative and euphoric events, showcase your expertise in this cultural extravaganza and prove your mettle by donning different chef hats and smoking the stage! Ignite the passion and vigor in your stomach and soup up as it is going to be LEGEN-wait for it- DARY, this spring! Good Luck and Bon Appetit!</string>
    <string name="app_name">Kuruksastra\'15</string>
    <string name="action_settings">Settings</string>
    <string name="common_content_desc">Image</string>
    <string name="media">Media</string>
    <string name="thespian">Thespian</string>
    <string name="eng_lits">English Lits</string>
    <string name="tam_lits">Tamil Lits</string>
    <string name="hindi_lits">Hindi Lits</string>
    <string name="telugu_lits">Telugu Lits</string>
    <string name="east_dance">Eastern Dance</string>
    <string name="west_dance">Western Dance</string>
    <string name="music">Music</string>
    <string name="arts">Fine Arts</string>
    <string name="general">General Updates</string>
    <string name="fav_cluster">Choose the clusters for which you wish to receive notifications</string>
    <string name="kuruksastra_description">SASTRA University and Aircel serve you the latest edition of KURUKSASTRA ‘15, a National level cultural fest – and this time it’s spicier and tastier! Come and indulge your senses in the most sumptuous buffet of events spanning 3 days and tease your taste buds by savoring the mouthwatering delicacies offered by each of our clusters. With a myriad of creative and euphoric events, showcase your expertise in this cultural extravaganza and prove your mettle by donning different chef hats and smoking the stage! Ignite the passion and vigor in your stomach and soup up as it is going to be LEGEN-wait for it- DARY, this spring! Good Luck and Bon Appetit!</string>
    <string name="salle_de_cinema">Salle De Cinema(Short film)</string>
    <string name="short_film_desc">Short film is to Feature film what Maggi is to Hakka Noodles. The only difference is time and money. The art remains the same. The recipe for a short film is simple. Impress your audience. The butter is on the popcorn. The straw is in the soda cup. The audience is ready. Are you?</string>
    <string name="minute_made">Minute Made(Ad Film)</string>
    <string name="min_made_desc">80% of decisions made for buying food products can be attributed to the products’ advertisements. Minute made tests the unique ability of being able to come up with a creative idea that is funny, thoughtful and/or catchy. But can you do it before someone makes a glass of tang?</string>
    <string name="say_cheese">Say Cheese(Online Photography)</string>
    <string name="say_cheese_desc">Like cooking, photography is an art form that is dying. You go around thinking you can cook, but you know you are owned when you taste your mother’s cooking. Only an expert can make everyone shut up. So pick up that camera and prove to the world, who the mother of all shutterbugs is.</string>
    <string name="movie_quiz">Shaken, Not Stirred(Movie Quiz)</string>
    <string name="movie_quiz_desc">The Ultimate Movie Geek Battle is back. All those movie debates over lunch and dinner maybe the only arsenal you need. Suit up and prepare yourself. No Prisoners. No Mercy. Forth Eorlingas!</string>
    <string name="one_act_play">Tempura(One Act Play)</string>
    <string name="one_act_play_desc">Quintessentially, Tempura consists of vegetables that have been battered and deep fried. Bringing out the freshest and most skilled talent to the intensely heated arena of drama, we present the flagship event of Dramatics at Kuruksastra ’15, Tempura. The roast is now passé, Tempura is here.</string>
    <string name="concasse">Concasse(Online Script Writing)</string>
    <string name="concasse_desc">Writing requires bravery, scriptwriting more so. If you are a script writer, write the deepest and truest you can. Writing, in essence is quite like concasse. You choose your ingredients, peel and deseed, and then dice them up to create a delectable delight. We’re not looking for chefs, but if you think you can mince your words quite literally, then Concasse is the event for you.</string>
    <string name="flambe">Flambé(Screenplay)</string>
    <string name="flambe_desc">Flambé: the exquisite and flamboyant art of tableside food presentation. Flambéing is an art form used by the French chefs since time immemorial to grab eyeballs. Moving out from the kitchen, and on to the stage, the art of screenplay comes closest to flambéing. Concoct the most visually appealing flambé on stage and get ready to get noticed.</string>
    <string name="tossed">Tossed Salad</string>
    <string name="tossed_desc">A dollop of happiness. A hint of excitement. A pinch of anxiety. All of this garnished with truckloads of drama, sugar, spice and everything nice. Witness the creation of the most fun filled, lip smacking tossed salad ever, at Kuruksastra ’15.Venue\nTime:</string>
    <string name="gen_quiz">Food For Thought(Gen Quiz)</string>
    <string name="gen_quiz_desc">The Gen Quiz at KS 15. The quiz will your test your knowledge about the world in general. Prepare to face off against the Masterminds and come through with flying colours. Get ready to get your brains flambéed.</string>
    <string name="spent_quiz">Strawberries And Cream(SPENT Quiz)</string>
    <string name="spent_quiz_desc">If you’re sports fanatic or cannot get enough of entertainment then this is the place for you to be. Prepare to get served!</string>
    <string name="av_quiz">flAVour(AV Quiz)</string>
    <string name="av_quiz_desc">Sugar, spice and everything nice – the AV quiz at KS ’15 is set to spice you up with the essence of music and pop culture. AVid tasters are welcome.</string>
    <string name="dumbc">Mouthful(Dumb Charades)</string>
    <string name="dumbc_desc">Do you think you have the ability to convey something to your friends without uttering a single word? Enthral us with your miming skills and show off your chemistry with your team-mates. It’s okay if you can bite more than you can chew, you can always act it out.</string>
    <string name="cocktail">Cocktail(Potpourri)</string>
    <string name="cocktail_desc">An amalgamation of all events that happen at English Lits. Be prepared to face any challenge thrown at you including miming, speaking, quizzes and word events. A multitude of courses to whet your appetite, so get your creative juices flowing!</string>
    <string name="jam">JAM(Just A Minute)</string>
    <string name="jam_desc">Are you that garrulous person in your gang who can go nuts with the given topic? Or if you like to point out errors in someone else\'s speech you don\’t need to go further than JAM, the signature event at English Lits. Spread over a minute, it promises to leave you hungry for more.</string>
    <string name="extempore">Wise Crackers(Extempore)</string>
    <string name="extempore_desc">What would you do if you had to face the unknown? Gear up to ramble on without prior preparation. Extempore will challenge your imagination and will be a test of your ability to portray it effectively. It doesn\’t matter if your jokes are bitter or sweet; just don’t forget to be funny.</string>
    <string name="debate">The Roast(Debate)</string>
    <string name="debate_desc">Do you like to argue relentlessly to get your point across? Do you like to leave opponents dumb founded with your eloquence? Then this is the perfect platform for you to showcase your talent with words. Let the feast begin!</string>
    <string name="wtgw">What\’s The Good Word</string>
    <string name="wtgw_desc">Can you adroitly grasp the finer nuances of Ye Olde English? Glean hidden meanings from seemingly innocuous words? It is in fact a language difficult to master. A plethora of word games like etymologies, anagrams and rebuses. A host of questions that boggle your mind. We know it\'s on the tip of your tongue, but What\'s The Good Word?</string>
    <string name="crossword">Square Meal(Crossword)</string>
    <string name="crossword_desc">Your ability to solve cryptic clues set in a two-dimensional grid will be tested in this event. We will put our best efforts into giving Ximenians a run for their money while retaining the integrity of the grid. So gather round for your three squares of the day!</string>
    <string name="hindi_antakshari">Raseele Sur(ANTAKSHARI)</string>
    <string name="hindi_antakshari_desc">Sur taal ka baethay sahi taam mel\nGaano ka romanchak khel!</string>
    <string name="hindi_extempore_desc">Apki vanni ki fruttyness ki pariksha li jayegi</string>
    <string name="hindi_extempore">Tuti Fruity Vani(Extempore)</string>
    <string name="hindi_dumbc">Barfi(Dumb C)</string>
    <string name="hindi_dumbc_desc">Kitna samajhte hai aap apne sathi ko, bina bole, bina muh khole, dil ki baat bujho to jane...</string>
    <string name="hindi_jam">JAM</string>
    <string name="hindi_jam_desc">Theekhi mirchi: soch samajh ke kerna bang verna milega bura punishment!</string>
    <string name="fun_event">Khatta Meetha(Fun Event)</string>
    <string name="fun_event_desc">Hota to sabke paas hai, par koi istemaal nhi karta...dimaag ke har kone ka poorn istemaal krne ko kar denge hum majboor.</string>
    <string name="navsratna">Navaratna(Flag Event)</string>
    <string name="navaratna_desc">Milenge kai ratna,kuch khatte,kuch meethe,kuch teekhe to kuch karare, jeevan ki is thali me jo bhar laega sare ratna wahi kehlaega hamara NAVRATNA! </string>
    <string name="garam_masala">Garam Masala(Creative Writing)</string>
    <string name="garam_masala_desc">Apne bat ko batane ki shamta dikhaiye apne  likhne ki prathibha se!! Vishe de diya jayega apko diye gaye samay mai sabse rachnatmak tareeke se likhna hai.</string>
    <string name="hindi_debate">Chai Pe Charcha(Debate)</string>
    <string name="hindi_debate_desc">Apke bolne aur samajhne ki shamta ko dekha jayegi. vishe bharat se sambhandit kuch bhi diya jaa sakta hai.</string>
    <string name="india_quiz">Chatpata Bharat(India Quiz)</string>
    <string name="india_quiz_desc">Kamaal sawalon ka bawal, dekhen kaun hoga behaal aur kaun machata hai dhamaal!</string>
    <string name="body">\"Kuruksastra to me is everything. It\'s that time of the year when you go up on a stage, be it as a participant or an organizer; you stand before hundreds of people, and you stand before your peers and let people know you mean something. My very first Kuruksastra - it was on my 18th birthday. I walked up the stage at and an entire auditorium sang happy birthday to me, and I had goosebumps then just as I\'ve had goosebumps every single Kuruksastra that I\'ve had the privilege and honour of being a part of.\"\n\n-Vignesh Vijaykumar</string>
    <string name="bhram">\"KS is not a fest, it\'s a feeling of pride. With the biggest of colleges competing for the coveted overalls, it\'s scintillating to see the best of teams take the stage and display their talent. The awe of the pro shows and the gala that spreads amongst the crowd only leaves them asking for more. KS has only been getting better every year and it\’s certainly destined to reach new heights\"\n\n-Abhiram Chandrashekhar</string>
    <string name="call">&#xf10b;</string>
    <string name="sms">&#xf003;</string>
</resources>