<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">

    <LinearLayout
        android:id="@+id/media_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:padding="10dp">
        <ImageView
            android:id="@+id/media_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/literary"
            android:contentDescription="@string/common_content_desc"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/media_events_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/media_header"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Gen Quiz-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen_quiz"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/gen_quiz_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />

            <!--SPENT Quiz-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spent_quiz"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/spent_quiz_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />

            <!--AV Quiz-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/av_quiz"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/av_quiz_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />

            <!--DUMB-c-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dumbc"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/dumbc_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />

            <!--Cocktail-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cocktail"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/cocktail_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />

            <!--JAM-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jam"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/jam_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />

            <!--EXTEMPORE-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extempore"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/extempore_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />


            <!--Debate-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debate"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/debate_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />

            <!--WTGW-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wtgw"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/wtgw_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />

            <!--Crossword-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crossword"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/crossword_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>