<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">

    <LinearLayout
        android:id="@+id/media_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:padding="10dp">

        <ImageView
            android:id="@+id/media_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/media"
            android:contentDescription="@string/common_content_desc"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"/>
        </LinearLayout>

    <ScrollView
        android:id="@+id/media_events_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/media_header"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Short Film-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salle_de_cinema"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/short_film_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />

            <!--Ad Film-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute_made"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/min_made_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />

            <!--Online photography-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/say_cheese"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/say_cheese_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            <View
                android:layout_width="320dp"
                android:layout_height="0.5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/divider_grey"
                />

            <!--Movie Quiz-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_quiz"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_gravity="left"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:paddingTop="12dp"
                android:text="@string/movie_quiz_desc"
                android:textSize="15sp"
                android:textColor="#ffffff"/>
            </LinearLayout>
        </ScrollView>

</RelativeLayout>